feat: improve recursive comparison messages and make the code a bit clearer when comparing java and non java types.